kube/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argo
  annotations:
    traefik.ingress.kubernetes.io/service.server.scheme: "https"
    traefik.ingress.kubernetes.io/ssl-verify: "false"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - localhost
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
